Fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ h2 {
 }
 
 .gray-area {
-  padding: var(--rhythm-7) 0 var(--rhythm-10) 0;
+  padding: var(--rhythm-7) 0 var(--rhythm-3);
   background-image: linear-gradient(360deg, var(--color-light-stronger) 0%, var(--color-neutral-lighter) 68%);
 }
 
@@ -162,7 +162,6 @@ h2 {
 @media (min-width: 768px) {
   .header {
     flex-direction: row;
-    padding-top: var(--rhythm-9);
   }
   .logo {
     padding: 0 8%;
